--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "mongoose": "^5.0.16",
+    "simplecrypt": "^0.1.0",
     "socket.io": "^2.1.0"
   }
 }
